fix: "Add buttons" in form of anchors should not have extra padding compared to buttons
Background: Cypress chokes on all the tests right now if we don't use anchors for the add buttons. I don't know why and I don't have the time to investigate right now. This fix achieves the same effect of aligning the button stylings without actually changing markup.

--- a/css/timemanager.scss
+++ b/css/timemanager.scss
@@ -291,6 +291,7 @@ label {
 
 	.new {
 		display: inline-block;
+		padding: calc((var(--default-clickable-area) - 1lh) / 2) calc(3 * var(--default-grid-baseline));
 	}
 
 	// Waits 3 seconds for the JS to kick in, otherwise shows
